Saltada la parte 3, hecha la parte 4

--- a/minitarea4.ipynb
+++ b/minitarea4.ipynb
@@ -83,11 +83,11 @@
       "metadata": {
         "id": "HTnTHCBzUUx3",
         "colab_type": "code",
+        "outputId": "b79f8e74-7b98-4bcf-d040-356d01271274",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 927
-        },
-        "outputId": "53ddc12f-e31f-4896-e21f-6ba455339834"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -115,7 +115,7 @@
             "Mounted at /content/gdrive\n",
             "Collecting astroquery\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/61/50/a7a08f9e54d7d9d97e69433cd88231e1ad2901811c9d1ae9ac7ccaef9396/astroquery-0.3.9.tar.gz (4.2MB)\n",
-            "\u001b[K    100% |████████████████████████████████| 4.2MB 4.8MB/s \n",
+            "\u001b[K    100% |████████████████████████████████| 4.2MB 3.6MB/s \n",
             "\u001b[?25hRequirement already satisfied: astropy>=1.0 in /usr/local/lib/python2.7/dist-packages (from astroquery) (2.0.12)\n",
             "Requirement already satisfied: requests>=2.4.3 in /usr/local/lib/python2.7/dist-packages (from astroquery) (2.18.4)\n",
             "Collecting keyring>=4.0 (from astroquery)\n",
@@ -143,10 +143,10 @@
             "Requirement already satisfied: configparser>=3.5; python_version == \"2.7\" in /usr/local/lib/python2.7/dist-packages (from entrypoints->keyring>=4.0->astroquery) (3.7.4)\n",
             "Collecting cryptography (from secretstorage<3; (sys_platform == \"linux2\" or sys_platform == \"linux\") and python_version < \"3.5\"->keyring>=4.0->astroquery)\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/c3/c1/cf8665c955c9393e9ff0872ba6cd3dc6f46ef915e94afcf6e0410508ca69/cryptography-2.6.1-cp27-cp27mu-manylinux1_x86_64.whl (2.3MB)\n",
-            "\u001b[K    100% |████████████████████████████████| 2.3MB 9.5MB/s \n",
+            "\u001b[K    100% |████████████████████████████████| 2.3MB 11.1MB/s \n",
             "\u001b[?25hCollecting asn1crypto>=0.21.0 (from cryptography->secretstorage<3; (sys_platform == \"linux2\" or sys_platform == \"linux\") and python_version < \"3.5\"->keyring>=4.0->astroquery)\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/ea/cd/35485615f45f30a510576f1a56d1e0a7ad7bd8ab5ed7cdc600ef7cd06222/asn1crypto-0.24.0-py2.py3-none-any.whl (101kB)\n",
-            "\u001b[K    100% |████████████████████████████████| 102kB 26.8MB/s \n",
+            "\u001b[K    100% |████████████████████████████████| 102kB 27.1MB/s \n",
             "\u001b[?25hRequirement already satisfied: enum34; python_version < \"3\" in /usr/local/lib/python2.7/dist-packages (from cryptography->secretstorage<3; (sys_platform == \"linux2\" or sys_platform == \"linux\") and python_version < \"3.5\"->keyring>=4.0->astroquery) (1.1.6)\n",
             "Requirement already satisfied: ipaddress; python_version < \"3\" in /usr/local/lib/python2.7/dist-packages (from cryptography->secretstorage<3; (sys_platform == \"linux2\" or sys_platform == \"linux\") and python_version < \"3.5\"->keyring>=4.0->astroquery) (1.0.22)\n",
             "Requirement already satisfied: cffi!=1.11.3,>=1.8 in /usr/local/lib/python2.7/dist-packages (from cryptography->secretstorage<3; (sys_platform == \"linux2\" or sys_platform == \"linux\") and python_version < \"3.5\"->keyring>=4.0->astroquery) (1.12.2)\n",
@@ -188,11 +188,11 @@
       "metadata": {
         "id": "CGvtX_eLVpRg",
         "colab_type": "code",
+        "outputId": "242a5344-f39b-4916-dbb1-c5250b9d0b36",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 185
-        },
-        "outputId": "2370c3dd-c3c1-4be9-d8f6-007d544d0c7c"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -239,11 +239,11 @@
       "metadata": {
         "id": "s98YFlc6qGcC",
         "colab_type": "code",
+        "outputId": "b6fc683c-9b49-489c-a2f6-45f44983b949",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 856
-        },
-        "outputId": "265558a8-c7c0-4f7f-879f-13ff098744a3"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -309,7 +309,7 @@
         "cb = plt.colorbar()\n",
         "cb.set_label('Flux [10$^{-16}$ erg/s/cm$^2$/$\\AA$]')\n"
       ],
-      "execution_count": 20,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
@@ -345,11 +345,11 @@
       "metadata": {
         "id": "inm_DLjOK7ul",
         "colab_type": "code",
+        "outputId": "0c2f0ad3-a7bd-43bd-905a-9cea2d0b4aa1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1206
-        },
-        "outputId": "974904bd-9e17-4d56-b40f-6ca351b2a89f"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -418,7 +418,7 @@
         "plt.ylabel('Flux 10$^{-16}$ erg/s/cm$^2$/$\\AA$')\n",
         "plt.title('(25,25)')"
       ],
-      "execution_count": 27,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -430,7 +430,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 27
+          "execution_count": 4
         },
         {
           "output_type": "display_data",
@@ -477,14 +477,35 @@
       "metadata": {
         "id": "_qHOe4Ypi8p1",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "82687d79-f3c9-4e82-92b2-5ea869e06fbb"
       },
       "cell_type": "code",
       "source": [
-        ""
+        "#rut 20.189.535-9\n",
+        "\n",
+        "SCoord = SkyCoord(ra=35*u.degree, dec=35*u.degree, frame='icrs')\n",
+        "SCoord"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<SkyCoord (ICRS): (ra, dec) in deg\n",
+              "    (35., 35.)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
     },
     {
       "metadata": {
